# energy-assistant-frontend

./: .editorconfig  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.cjs  CLAUDE.md  MANIFEST.in  README.md  env.d.ts  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  prettier.config.cjs  prettier.config.js  pyproject.toml  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
.github/workflows/: ci.yaml  release.yaml
public/: __init__.py
src/: App.vue  main.ts  style.css  utils.ts  vite-env.d.ts
src/api/: README.md  device.ts  devices.api.ts  energyAssistant.api.ts  index.ts  measurement.api.ts  measurementApi.ts
src/api/services/: base.ts  config.ts  device.ts  (+4 more)
src/components/: ConsumptionCard.vue  DeviceCard.vue  DeviceEnergyCard.vue  DeviceMeasurementTable.vue  DevicePowerDistributionCard.vue  DeviceSessionLog.vue  EnergyAssistant.vue  EnergyConsumptionCard.vue  HeatPumpCard.vue  HelloWorld.vue  HomeCard.vue  HomeMeasurementTable.vue  MeasurementTable.vue  PowerFlowCard.vue  PowerModeSelection.vue  SelfSufficiencyBar.vue  WeeklyStatistics.vue  WeeklyStatisticsCard.vue
src/plugins/: breakpoint.ts  i18n.ts  index.ts  router.ts  store.ts  vuetify.ts
src/router/: index.ts
src/styles/: components.scss  global.css  global.scss  settings.scss
src/translations/: de.json  en.json  nl.json
src/views/: Forecast.vue  History.vue  Home.vue  HomeView.vue  Overall.vue  RawData.vue  Search.vue  SessionLog.vue  Settings.vue  Statistics.vue
(+21 files in other folders)
