[build-system]
requires = ["setuptools~=62.3", "wheel~=0.37.1"]
build-backend = "setuptools.build_meta"

[project]
name         = "energy-assistant-frontend"
# The version is set by GH action on release
version = "0.0.0"
license      = {text = "Apache-2.0"}
description  = "The Energy Assistant frontend"
readme       = "README.md"
authors = [{ name = "The Energy Assistant Creators", email = "pail23@users.noreply.github.com" }]
requires-python = ">=3.11.0"

[project.urls]
"Homepage" = "https://github.com/music-assistant/frontend"

[tool.setuptools]
platforms = ["any"]
zip-safe  = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["energy_assistant_frontend"]